#!/bin/sh

if [ -e $3 ]
  then
    [[ `find $1 -newer $3` == "" ]]
  else
    true
fi