@@ -7,8 +7,16 @@ def update_mtime(filename, new_mtime)
   File.utime(File.atime(filename), new_mtime, filename)
 end
 
-Given(/^"(.*?)" is modified before "(.*?)"$/) do |first, second|
+def enforce_mtime_order(first, second)
   in_current_dir do
     update_mtime(second, later_than(File.mtime(first)))
   end
+end
+
+Given(/^"(.*?)" is modified before "(.*?)"$/) do |first, second|
+  enforce_mtime_order(first, second)
+end
+
+Given(/^"(.*?)" is modified after "(.*?)"$/) do |second, first|
+  enforce_mtime_order(first, second)
 end
