@@ -2,7 +2,8 @@
 
 if [ -e $3 ]
   then
-    [[ `find $1 -newer $3` == "" ]]
+    changed=`find $1 -newer $3`
+    [ "$changed" != "" ]
   else
     true
 fi
